@@ -128,6 +128,10 @@ CMF 2.0.0-alpha (2006/01/22)
 
   Bug Fixes
 
+    - CMFDefault utils: Fixed html_marshal function.
+      The return values are no longer escaped to avoid double quoting and no
+      longer stringified. The page templates take care of these steps.
+
     - PortalFolder: Synced _verifyObjectPaste code with OFS.CopySupport.
       The behavior is almost the same as before, but the code is less tolerant
       if content types are not registered properly.
